# rules_tf

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  version.bzl
.github/workflows/: ci.yml  release.yml  workflow.yml
distro/: BUILD.bazel
scripts/: package_distro.sh
tests/bcr/: MODULE.bazel
tests/bcr/tf/: BUILD.bazel  my-tfdoc-config.yaml  my-tflint-config.hcl
tests/bcr/tf/modules/mod-a/: BUILD.bazel  README.md  main.tf  outputs.tf  variables.tf  versions.tf.json
tests/bcr/tf/modules/multi_provider/: BUILD.bazel  README.md  main.tf  outputs.tf  variables.tf  versions.tf.json
tests/bcr/tf/root-modules/root-mod-a/: BUILD.bazel  README-custom.md  README.md  main.tf  outputs.tf  variables.tf  versions.tf.json
tests/bcr/tf/root-modules/root-mod-multi-provider/: BUILD.bazel  README.md  main.tf  outputs.tf  variables.tf  versions.tf.json
tf/: BUILD.bazel  def.bzl  extensions.bzl  toolchains.bzl  versions.bzl
tf/releasing/: BUILD.bazel  defs.bzl  git.bzl  git_changelog_private.py  print_rel_notes.py
tf/rules/: BUILD.bazel  providers.bzl  tf-gen-doc.bzl  tf-gen-versions.bzl  tf-gen-versions.sh  tf-lint.bzl  tf-module.bzl  tf-providers-versions.bzl
tf/toolchains/: tf_toolchain.bzl  utils.bzl
tf/toolchains/git/: BUILD.bazel  BUILD.tpl  git.bzl  git_configure.bzl
tf/toolchains/plugins_mirror/: BUILD.toolchain.tpl  toolchain.bzl
tf/toolchains/terraform/: BUILD.toolchain.tpl  toolchain.bzl
tf/toolchains/tfdoc/: BUILD.bazel  BUILD.toolchain.tpl  tf-doc.yaml  toolchain.bzl
tf/toolchains/tflint/: BUILD.bazel  BUILD.toolchain.tpl  toolchain.bzl  wrapper.sh
tf/toolchains/tofu/: BUILD.bazel  BUILD.toolchain.tpl  toolchain.bzl
