load("@rules_tf//tf:toolchains.bzl", "register_toolchains")

toolchain_type(
    name = "terraform_toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "tflint_toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "tfdoc_toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "tofu_toolchain_type",
    visibility = ["//visibility:public"],
)

register_toolchains()
