# Copyright 2019 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:version.bzl", "next_version", "previous_version")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//tf/releasing:defs.bzl", "print_rel_notes")
load("//tf/releasing:git.bzl", "git_changelog")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:private"],
)

alias(
    name = "distro",
    actual = "rules_tf-%s" % next_version,
)

# Build the artifact to put on the github release page.
pkg_tar(
    name = "rules_tf-%s" % next_version,
    srcs = [
        ":small_workspace",
        "//:standard_package",
        "//tf:standard_package",
        "//tf/rules:standard_package",
        "//tf/toolchains/git:standard_package",
        "//tf/toolchains/terraform:standard_package",
        "//tf/toolchains/tfdoc:standard_package",
        "//tf/toolchains/tflint:standard_package",
        "//tf/toolchains/tofu:standard_package",
    ],
    extension = "tar.gz",
    # It is all source code, so make it read-only.
    mode = "0444",
    # Make it owned by root so it does not have the uid of the CI robot.
    owner = "0.0",
    package_dir = ".",
    strip_prefix = ".",
)

genrule(
    name = "small_workspace",
    srcs = ["//:WORKSPACE"],
    outs = ["WORKSPACE"],
    cmd = "sed -e '/### INTERNAL ONLY/,$$d' $(location //:WORKSPACE) >$@",
)

print_rel_notes(
    name = "relnotes",
    outs = ["relnotes.md"],
    changelog = ":changelog",
    deps_method = "rules_tf_dependencies",
    mirror_host = "mirror.bazel.build",
    org = "yanndegat",
    repo = "rules_tf",
    version = next_version,
)

git_changelog(
    name = "changelog",
    out = "changelog.txt",
    from_ref = "v{}".format(previous_version),
    verbose = True,
)

genrule(
    name = "version_as_py",
    outs = ["release_version.py"],
    cmd = "echo RELEASE_VERSION = \\'%s\\' >$@" % next_version,
)
