module(
    name = "rules_tf_bcr_tests",
    version = "0.0.1",
)

bazel_dep(name = "rules_tf", version = "", repo_name = "rules_tf")
local_path_override(
    module_name = "rules_tf",
    path = "../..",
)

repos = use_extension("@rules_tf//tf:extensions.bzl", "tf_repositories")

repos.download( version = "1.5.7", use_tofu = False )

use_repo(
    repos,
    "tf_binary",
)

register_toolchains(
    "@tf_binary//:toolchain",
)
