module(
    name = "rules_tf_bcr_tests",
    version = "0.0.1",
)

bazel_dep(name = "rules_tf", version = "", repo_name = "rules_tf")
local_path_override(
    module_name = "rules_tf",
    path = "../..",
)

tf = use_extension("@rules_tf//tf:extensions.bzl", "tf_repositories")

tf.download( version = "1.5.7", use_tofu = False )

use_repo(tf, "tf_toolchains")

plugins_mirror = use_extension("@rules_tf//tf:extensions.bzl", "plugins_mirror")
plugins_mirror.versions(
    name = "default",
    versions = {
        "random" : "hashicorp/random:3.3.2",
        "null"   : "hashicorp/null:3.1.1",
    }
)

use_repo(plugins_mirror, "tf_plugins_mirrors")
register_toolchains(
    "@tf_toolchains//:all",
    "@tf_plugins_mirrors//:all",
)
