package(default_applicable_licenses = ["//:license"])

filegroup(
    name = "standard_package",
    srcs = [
        "BUILD.bazel",
    ] + glob([
        "*.bzl",
    ]),
    visibility = [
        "//distro:__pkg__",
        "//tf:__pkg__",
    ],
)

exports_files(
    glob([
        "*.bzl",
    ]),
    visibility = [
        "//distro:__pkg__",
        "//tf:__pkg__",
    ],
)
